feat: Initialize personal portfolio with core sections, components, and SEO metadata.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Dilukshan Viyapury — Full-Stack Developer & AI/ML Researcher. Building production systems for UK clients, conducting federated medical AI research, and crafting full-stack applications." />
+    <meta name="theme-color" content="#050a0e" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Dilukshan Viyapury — Full-Stack Developer & AI/ML Researcher" />
+    <meta property="og:description" content="Shipping production systems for international UK clients, conducting AI/ML research, and building full-stack applications across diverse tech stacks." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dilukshan285.github.io/Portfolio/" />
+
     <title>Dilukshan Viyapury — Full-Stack Developer & AI/ML Researcher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
